chore: Added pipeline

--- a/yelp_review_classification/get_restaurant_recommendation.ipynb
+++ b/yelp_review_classification/get_restaurant_recommendation.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,9 +558,9 @@
     "    3. Find best restaurant\n",
     "    \"\"\"\n",
     "\n",
-    "    if \"mood\" not in df.columns:\n",
-    "        print(\"Mood column not found. Auto-labeling reviews...\")\n",
-    "        df[\"mood\"] = df[\"review\"].apply(assign_mood)\n",
+    "    # if \"mood\" not in df.columns:\n",
+    "    #     print(\"Mood column not found. Auto-labeling reviews...\")\n",
+    "    #     df[\"mood\"] = df[\"review\"].apply(assign_mood)\n",
     "\n",
     "    print(f\"🔍 Finding restaurants for mood: {user_mood}\")\n",
     "\n",
