chore: Updated preprocessing

--- a/yelp_review_classification/preprocessing/classify_reviews_mood.ipynb
+++ b/yelp_review_classification/preprocessing/classify_reviews_mood.ipynb
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
       "\n",
       "          mood  spearman_correlation  \n",
       "0    indulgent              0.577350  \n",
-      "1         cozy             -0.577350  \n",
+      "1         cozy              0.577350  \n",
       "2  adventurous              0.082479  \n",
       "3    indulgent              0.577350  \n",
       "4      festive             -0.577350  \n",
@@ -257,14 +257,14 @@
       "*****Similarity_Scores_DF\n",
       "          mood  spearman_correlation  adventurous  comforting  energizing  \\\n",
       "0    indulgent              0.577350     0.145074    0.012018    0.089682   \n",
-      "1         cozy             -0.577350     0.147379    0.035424    0.118741   \n",
+      "1         cozy              0.577350     0.147379    0.035424    0.118741   \n",
       "2  adventurous              0.082479     0.227193    0.049585    0.114050   \n",
       "3    indulgent              0.577350     0.149511    0.075622    0.113550   \n",
       "4      festive             -0.577350     0.163996    0.038021    0.050737   \n",
       "\n",
       "   romantic      cozy   festive  indulgent  refreshing human_scored_mood  \n",
       "0  0.051065  0.208144  0.225149   0.280261    0.029452         indulgent  \n",
-      "1  0.042849  0.230095  0.130889   0.165506    0.102941        comforting  \n",
+      "1  0.042849  0.230095  0.130889   0.165506    0.102941              cozy  \n",
       "2  0.072648  0.224918  0.097729   0.200360    0.117214        refreshing  \n",
       "3  0.078758  0.139143  0.164757   0.293226    0.094920         indulgent  \n",
       "4  0.065152  0.164367  0.172096   0.147435    0.095951        comforting  \n"
