Added new translation library, MyMemoryTranslator

--- a/details_from_llm/restaurant_details_from_llm.ipynb
+++ b/details_from_llm/restaurant_details_from_llm.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,11 +187,10 @@
       "5655 Westheimer Rd Suite A, Houston, TX 77056\n",
       "Chama Gaucha is a high-end churrascaria (Brazilian steakhouse) offering a wide selection of grilled meats carved tableside by gauchos (Brazilian cowboys)\n",
       "Vibrant, lively, and celebratory\n",
-      "Reviewers consistently praise the \"perfectly cooked meats\" and the \"robust salad bar\" with fresh options. \n",
-      "                    The service is frequently described as \"impeccable\" and \"attentive,\" with staff ensuring glasses are filled and meat preferences are met.\n",
+      "Reviewers consistently praise the perfectly cooked meats and the robust salad bar with fresh options. The service is frequently described as impeccable and attentive, with staff ensuring glasses are filled and meat preferences are met.\n",
       "4.7\n",
       "Sunday - Thursday: 11 AM - 10 PM\n",
-      "                    Friday - Saturday: 11 AM - 11 PM\n",
+      "Friday - Saturday: 11 AM - 11 PM\n",
       "$30 - $50\n",
       "Picanha, Churrasco, Salad Bar\n"
      ]
@@ -226,34 +225,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cpu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from transformers import pipeline\n",
-    "\n",
-    "translator = pipeline(\"translation\", model=\"t5-base\")\n",
-    "\n",
-    "# target language could be Romanian, French, German\n",
-    "def translate(input_text, target_langage):\n",
-    "\n",
-    "    text = f\"translate English to {target_langage}: {input_text}\"\n",
-    "    results = translator(text)\n",
-    "\n",
-    "    return results[0]['translation_text']"
+    "from deep_translator import MyMemoryTranslator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Locate .env file, and load environment variables.\n",
+    "dotenv_path = find_dotenv()\n",
+    "if dotenv_path:\n",
+    "    load_dotenv(dotenv_path)\n",
+    "else:\n",
+    "    raise FileNotFoundError(\".env file not found!\")\n",
+    "\n",
+    "# Load the API key to a variable.\n",
+    "TRANSLATOR_API_KEY = os.getenv(\"MYMEMORY_API_KEY\")\n",
+    "if not TRANSLATOR_API_KEY:\n",
+    "    raise ValueError(\"MYMEMORY_API_KEY is missing! Check your .env file.\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing translation\n",
+    "source_language = 'en-US'\n",
+    "email = \"jiandliu@gmail.com\"\n",
+    "\n",
+    "def translate(input_text, target_language):\n",
+    "    translated = MyMemoryTranslator(source=source_language, target=target_language,\n",
+    "                                    email=email,\n",
+    "                                    key=TRANSLATOR_API_KEY).translate(input_text)\n",
+    "                                    \n",
+    "    return translated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -262,37 +281,46 @@
      "text": [
       "(713) 357-9777\n",
       "5655 Westheimer Rd Suite A, Houston, TX 77056\n",
-      "Chama Gaucha ist ein High-End-Churrascaria (Brasilianisches Steakhouse) mit einer großen Auswahl an gegrilltem Fleisch, das von Gauchos (Brasilianischen Cowboys) am Tisch geschnitzt wird.\n",
-      "Lebhaft, lebhaft und feierlich\n",
-      "Das Restaurant bietet eine reichhaltige Auswahl an Speisen und Getränken.\n",
-      "4,7\n",
-      "Sonntag - Donnerstag: 11.00 - 22.00 Uhr Freitag - Samstag: 11.00 - 23.00 Uhr\n",
-      "30 - 50 Dollar\n",
-      "Picanha, Churrasco, Salad Bar\n"
+      "Chama Gaucha是一家高端churrascaria （巴西牛排馆） ，提供各种各样的烤肉，由gauchos （巴西牛仔）雕刻而成\n",
+      "充满活力、热闹和欢庆\n",
+      "评论者始终称赞完美烹饪的肉类和强劲的沙拉吧，并提供新鲜的选择。这项服务经常被描述为无可挑剔和周到，工作人员确保玻璃杯装满，肉类偏好得到满足。\n",
+      "4.7\n",
+      "周日至周四：上午11点至晚上10点\n",
+      "周五至周六：上午11点至晚上11点\n",
+      "30-50\n",
+      "Picanha、Churrasco、沙拉吧\n"
      ]
     }
    ],
    "source": [
-    "# testing translationg\n",
-    "selected_language = 'German'\n",
-    "\n",
-    "result = translate(my_restaurant.phone, selected_language)\n",
+    "# testing translation\n",
+    "# en-US\n",
+    "# fr-FR\n",
+    "# zh-CN\n",
+    "# es-US\n",
+    "# es-MX\n",
+    "# de-DE\n",
+    "# ja-JP\n",
+    "# ro-RO\n",
+    "target_language = 'zh-CN'\n",
+    "    \n",
+    "result = translate(my_restaurant.phone, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.address, selected_language)\n",
+    "result = translate(my_restaurant.address, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.summary, selected_language)\n",
+    "result = translate(my_restaurant.summary, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.moods, selected_language)\n",
+    "result = translate(my_restaurant.moods, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.highlight, selected_language)\n",
+    "result = translate(my_restaurant.highlight, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.rating, selected_language)\n",
+    "result = translate(my_restaurant.rating, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.hours, selected_language)\n",
+    "result = translate(my_restaurant.hours, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.price, selected_language)\n",
+    "result = translate(my_restaurant.price, target_language)\n",
     "print(result)\n",
-    "result = translate(my_restaurant.popular_items, selected_language)\n",
+    "result = translate(my_restaurant.popular_items, target_language)\n",
     "print(result)"
    ]
   },
