--- a/translation/translation_method.ipynb
+++ b/translation/translation_method.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.11/dist-packages (4.50.3)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.11/dist-packages (from transformers) (3.18.0)\n",
@@ -51,15 +51,15 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Device set to use cpu\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Îmi sărbătoresc ziua de naştere.\n"
           ]
@@ -82,6 +82,66 @@
         "result = translate(\"I am celebrating my birthday.\", \"Romanian\")\n",
         "print(result)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from dotenv import load_dotenv, find_dotenv\n",
+        "import os\n",
+        "from deep_translator import MyMemoryTranslator\n",
+        "\n",
+        "# Locate .env file, and load environment variables.\n",
+        "dotenv_path = find_dotenv()\n",
+        "if dotenv_path:\n",
+        "    load_dotenv(dotenv_path)\n",
+        "else:\n",
+        "    raise FileNotFoundError(\".env file not found!\")\n",
+        "\n",
+        "# Load the API key to a variable.\n",
+        "TRANSLATOR_API_KEY = os.getenv(\"MYMEMORY_API_KEY\")\n",
+        "if not TRANSLATOR_API_KEY:\n",
+        "    raise ValueError(\"MYMEMORY_API_KEY is missing! Check your .env file.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "email = \"jiandliu@gmail.com\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Îmi sărbătoresc ziua de naștere\n"
+          ]
+        }
+      ],
+      "source": [
+        "# translated = MyMemoryTranslator(source=\"en-US\", target=\"fr-FR\").translate(\"See you later\")\n",
+        "translated = MyMemoryTranslator(source=\"en-US\", target=\"ro-RO\",\n",
+        "                                email=email,\n",
+        "                                key=TRANSLATOR_API_KEY).translate(\"I am celebrating my birthday\")\n",
+        "print(translated)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -89,7 +149,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "project",
       "language": "python",
       "name": "python3"
     },
@@ -103,7 +163,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.10.16"
     }
   },
   "nbformat": 4,
