--- a/Alternative Classifier/Complete Notebook.ipynb
+++ b/Alternative Classifier/Complete Notebook.ipynb
@@ -75,155 +75,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CHECK THE SCORES BETWEEN ZERO-SHOT AND THE SENTENCE TRANSFORMER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cpu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Evaluation Results:\n",
-      "\n",
-      "Review 1: The dim lighting and soft music made it perfect for a date night.\n",
-      "  True Mood        : romantic\n",
-      "  Zero-Shot Predict: cozy\n",
-      "  Embedding Predict: romantic\n",
-      "\n",
-      "Review 2: After a long day, this place just felt like a warm hug.\n",
-      "  True Mood        : comforting\n",
-      "  Zero-Shot Predict: cozy\n",
-      "  Embedding Predict: comforting\n",
-      "\n",
-      "Review 3: Every dish had a spicy kick—totally fired me up!\n",
-      "  True Mood        : energizing\n",
-      "  Zero-Shot Predict: energizing\n",
-      "  Embedding Predict: festive\n",
-      "\n",
-      "Review 4: We wore sweaters, had hot chocolate, and watched the snowfall from inside.\n",
-      "  True Mood        : cozy\n",
-      "  Zero-Shot Predict: cozy\n",
-      "  Embedding Predict: cozy\n",
-      "\n",
-      "Review 5: Twinkling lights and Christmas songs everywhere—like a holiday dream.\n",
-      "  True Mood        : festive\n",
-      "  Zero-Shot Predict: festive\n",
-      "  Embedding Predict: festive\n",
-      "\n",
-      "Review 6: The desserts were over-the-top and totally worth every bite.\n",
-      "  True Mood        : indulgent\n",
-      "  Zero-Shot Predict: indulgent\n",
-      "  Embedding Predict: indulgent\n",
-      "\n",
-      "Review 7: We hiked first, then found this open-air cafe with mountain views.\n",
-      "  True Mood        : refreshing\n",
-      "  Zero-Shot Predict: cozy\n",
-      "  Embedding Predict: cozy\n",
-      "\n",
-      "Review 8: Live jazz, old-school cocktails, and candlelight—it felt like time travel.\n",
-      "  True Mood        : romantic\n",
-      "  Zero-Shot Predict: festive\n",
-      "  Embedding Predict: cozy\n",
-      "\n",
-      "Review 9: The staff gave warm blankets and tea on a rainy night.\n",
-      "  True Mood        : comforting\n",
-      "  Zero-Shot Predict: cozy\n",
-      "  Embedding Predict: cozy\n",
-      "\n",
-      "Review 10: We danced under the stars after margaritas—total vacation vibes!\n",
-      "  True Mood        : energizing\n",
-      "  Zero-Shot Predict: festive\n",
-      "  Embedding Predict: romantic\n",
-      "\n",
-      "📊 Accuracy Scores\n",
-      "Zero-Shot Model Accuracy    : 0.40\n",
-      "Sentence Embedding Accuracy : 0.50\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "from sentence_transformers import SentenceTransformer, util\n",
-    "from transformers import pipeline\n",
-    "\n",
-    "# Sample 10 reviews and their labeled moods\n",
-    "reviews = [\n",
-    "    (\"The dim lighting and soft music made it perfect for a date night.\", \"romantic\"),\n",
-    "    (\"After a long day, this place just felt like a warm hug.\", \"comforting\"),\n",
-    "    (\"Every dish had a spicy kick—totally fired me up!\", \"energizing\"),\n",
-    "    (\"We wore sweaters, had hot chocolate, and watched the snowfall from inside.\", \"cozy\"),\n",
-    "    (\"Twinkling lights and Christmas songs everywhere—like a holiday dream.\", \"festive\"),\n",
-    "    (\"The desserts were over-the-top and totally worth every bite.\", \"indulgent\"),\n",
-    "    (\"We hiked first, then found this open-air cafe with mountain views.\", \"refreshing\"),\n",
-    "    (\"Live jazz, old-school cocktails, and candlelight—it felt like time travel.\", \"romantic\"),\n",
-    "    (\"The staff gave warm blankets and tea on a rainy night.\", \"comforting\"),\n",
-    "    (\"We danced under the stars after margaritas—total vacation vibes!\", \"energizing\"),\n",
-    "]\n",
-    "\n",
-    "true_moods = [label for _, label in reviews]\n",
-    "texts = [text for text, _ in reviews]\n",
-    "\n",
-    "# Mood options\n",
-    "mood_labels = [\n",
-    "    \"adventurous\", \"comforting\", \"energizing\", \"romantic\",\n",
-    "    \"cozy\", \"festive\", \"indulgent\", \"refreshing\"\n",
-    "]\n",
-    "\n",
-    "# Load models\n",
-    "classifier = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\")\n",
-    "embedder = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
-    "\n",
-    "# --- Zero-shot predictions ---\n",
-    "zero_shot_preds = []\n",
-    "for text in texts:\n",
-    "    result = classifier(text, candidate_labels=mood_labels)\n",
-    "    zero_shot_preds.append(result[\"labels\"][0])  # top prediction\n",
-    "\n",
-    "# --- Embedding-based predictions ---\n",
-    "# Embed all review texts and mood labels\n",
-    "review_embeddings = embedder.encode(texts, convert_to_tensor=True)\n",
-    "mood_embeddings = embedder.encode(mood_labels, convert_to_tensor=True)\n",
-    "\n",
-    "embedding_preds = []\n",
-    "for review_emb in review_embeddings:\n",
-    "    sims = util.pytorch_cos_sim(review_emb, mood_embeddings)[0]\n",
-    "    best_idx = sims.argmax().item()\n",
-    "    embedding_preds.append(mood_labels[best_idx])\n",
-    "\n",
-    "# --- Accuracy ---\n",
-    "zero_shot_acc = accuracy_score(true_moods, zero_shot_preds)\n",
-    "embedding_acc = accuracy_score(true_moods, embedding_preds)\n",
-    "\n",
-    "# --- Print results ---\n",
-    "print(\"\\nEvaluation Results:\\n\")\n",
-    "for i, text in enumerate(texts):\n",
-    "    print(f\"Review {i+1}: {text}\")\n",
-    "    print(f\"  True Mood        : {true_moods[i]}\")\n",
-    "    print(f\"  Zero-Shot Predict: {zero_shot_preds[i]}\")\n",
-    "    print(f\"  Embedding Predict: {embedding_preds[i]}\\n\")\n",
-    "\n",
-    "print(\"📊 Accuracy Scores\")\n",
-    "print(f\"Zero-Shot Model Accuracy    : {zero_shot_acc:.2f}\")\n",
-    "print(f\"Sentence Embedding Accuracy : {embedding_acc:.2f}\")"
+    "## Gemini Model Set Up"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gemini Model Set Up"
+    "### Base Model - Simply Using Gemeni to Recommend Restaurants"
    ]
   },
   {
@@ -315,6 +174,13 @@
    "metadata": {},
    "source": [
     "## Zero Shot Model Set Up - Please Enter In your Sample Size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optomized Step 1 - Change from Gemeni to Zero Shot Classifier for moods"
    ]
   },
   {
@@ -413,6 +279,20 @@
    "metadata": {},
    "source": [
     "## Sentence Transformer - Pulling In preprocessed data and loading model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optomized Step 2 - Zero Shot Classifier to the Better Performing Sentence Transformer - Please note that this model was run in preprocessing to save time and the mood outputs were saved to the dataset in hugging face"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Please See Code below gradio output for the accuracy scores"
    ]
   },
   {
@@ -570,6 +450,63 @@
      "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: R&D\n",
+      "🪵 Gemini raw text:\n",
+      " ```json\n",
+      "{\n",
+      "  \"phone\": \"(215) 386-1177\",\n",
+      "  \"address\": \"1144 S 11th St, Philadelphia, PA 19147\",\n",
+      "  \"summary\": \"R&D is a trendy cocktail bar in South Philadelphia known for its creative and expertly crafted cocktails, as well as its delicious Southeast Asian-inspired bar snacks.\",\n",
+      "  \"moods\": \"trendy, hip, lively, intimate\",\n",
+      "  \"highlight\": \"Known for its unique and innovative cocktail program and Southeast Asian-inspired bites.\"\n",
+      "}\n",
+      "```\n",
+      "📦 Gemini returned clean structured info.\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: R&D\n",
+      "🪵 Gemini raw text:\n",
+      " ```json\n",
+      "{\n",
+      "  \"phone\": \"(215) 386-1177\",\n",
+      "  \"address\": \"1201 Locust St, Philadelphia, PA 19107\",\n",
+      "  \"summary\": \"R&D is a stylish cocktail bar in Philadelphia known for its innovative and experimental drinks, often featuring unusual ingredients and techniques. They also offer a curated selection of snacks and small plates to complement the cocktails.\",\n",
+      "  \"moods\": \"trendy, sophisticated, intimate, lively\",\n",
+      "  \"highlight\": \"known for its creative and experimental cocktails\"\n",
+      "}\n",
+      "```\n",
+      "📦 Gemini returned clean structured info.\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: Laser Wolf\n",
+      "🧠 Mood selected: adventurous\n",
+      "✅ Gemini recommended restaurant: R&D\n",
+      "🪵 Gemini raw text:\n",
+      " ```json\n",
+      "{\n",
+      "  \"phone\": \"(215) 386-5300\",\n",
+      "  \"address\": \"1201 N Delaware Ave, Philadelphia, PA 19125\",\n",
+      "  \"summary\": \"R&D is a modern American restaurant located in Fishtown, Philadelphia.  It offers a seasonal menu with wood-fired dishes and a focus on local ingredients. The atmosphere is described as industrial-chic and lively.\",\n",
+      "  \"moods\": \"casual, trendy, lively, group-friendly\",\n",
+      "  \"highlight\": \"known for its wood-fired grill and extensive beer list\"\n",
+      "}\n",
+      "```\n",
+      "📦 Gemini returned clean structured info.\n"
+     ]
     }
    ],
    "source": [
@@ -642,6 +579,84 @@
     "tony_reviews = load_parquet_from_huggingface(REPO_ID, FILE_NAME)\n",
     "demo = create_interface()\n",
     "demo.launch()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### THE OPTOMIZATION CHECK WE DID TO UTILIZE SENTENCE TRANSFORMER -- Performs better than zero shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "# Sample 10 reviews and their labeled moods\n",
+    "reviews = [\n",
+    "    (\"The dim lighting and soft music made it perfect for a date night.\", \"romantic\"),\n",
+    "    (\"After a long day, this place just felt like a warm hug.\", \"comforting\"),\n",
+    "    (\"Every dish had a spicy kick—totally fired me up!\", \"energizing\"),\n",
+    "    (\"We wore sweaters, had hot chocolate, and watched the snowfall from inside.\", \"cozy\"),\n",
+    "    (\"Twinkling lights and Christmas songs everywhere—like a holiday dream.\", \"festive\"),\n",
+    "    (\"The desserts were over-the-top and totally worth every bite.\", \"indulgent\"),\n",
+    "    (\"We hiked first, then found this open-air cafe with mountain views.\", \"refreshing\"),\n",
+    "    (\"Live jazz, old-school cocktails, and candlelight—it felt like time travel.\", \"romantic\"),\n",
+    "    (\"The staff gave warm blankets and tea on a rainy night.\", \"comforting\"),\n",
+    "    (\"We danced under the stars after margaritas—total vacation vibes!\", \"energizing\"),\n",
+    "]\n",
+    "\n",
+    "true_moods = [label for _, label in reviews]\n",
+    "texts = [text for text, _ in reviews]\n",
+    "\n",
+    "# Mood options\n",
+    "mood_labels = [\n",
+    "    \"adventurous\", \"comforting\", \"energizing\", \"romantic\",\n",
+    "    \"cozy\", \"festive\", \"indulgent\", \"refreshing\"\n",
+    "]\n",
+    "\n",
+    "# Load models\n",
+    "classifier = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\")\n",
+    "embedder = SentenceTransformer(\"all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# --- Zero-shot predictions ---\n",
+    "zero_shot_preds = []\n",
+    "for text in texts:\n",
+    "    result = classifier(text, candidate_labels=mood_labels)\n",
+    "    zero_shot_preds.append(result[\"labels\"][0])  # top prediction\n",
+    "\n",
+    "# --- Embedding-based predictions ---\n",
+    "# Embed all review texts and mood labels\n",
+    "review_embeddings = embedder.encode(texts, convert_to_tensor=True)\n",
+    "mood_embeddings = embedder.encode(mood_labels, convert_to_tensor=True)\n",
+    "\n",
+    "embedding_preds = []\n",
+    "for review_emb in review_embeddings:\n",
+    "    sims = util.pytorch_cos_sim(review_emb, mood_embeddings)[0]\n",
+    "    best_idx = sims.argmax().item()\n",
+    "    embedding_preds.append(mood_labels[best_idx])\n",
+    "\n",
+    "# --- Accuracy ---\n",
+    "zero_shot_acc = accuracy_score(true_moods, zero_shot_preds)\n",
+    "embedding_acc = accuracy_score(true_moods, embedding_preds)\n",
+    "\n",
+    "# --- Print results ---\n",
+    "print(\"\\nEvaluation Results:\\n\")\n",
+    "for i, text in enumerate(texts):\n",
+    "    print(f\"Review {i+1}: {text}\")\n",
+    "    print(f\"  True Mood        : {true_moods[i]}\")\n",
+    "    print(f\"  Zero-Shot Predict: {zero_shot_preds[i]}\")\n",
+    "    print(f\"  Embedding Predict: {embedding_preds[i]}\\n\")\n",
+    "\n",
+    "print(\"📊 Accuracy Scores\")\n",
+    "print(f\"Zero-Shot Model Accuracy    : {zero_shot_acc:.2f}\")\n",
+    "print(f\"Sentence Embedding Accuracy : {embedding_acc:.2f}\")"
    ]
   }
  ],
